@@ -11,7 +11,8 @@
  1.8 beta 3: (2010-??-??)
  ! Fixed: NullPointerException when renaming an GPX file entry
  ! MyTopo URL updated and fixed
- ~ Unnecessary restriction of RMaps / BigPlanet Tracks to zoom 17 removed 
+ ~ Unnecessary restriction of RMaps / BigPlanet Tracks to zoom 17 removed
+ + New map source: Microsoft Maps with hill shade 
 
  1.8 beta 2: (2010-09-13)
  + AlpineQuestMap atlas creator updated (patch by Camille) 
